fixed overflow

--- a/website/static/css/style.css
+++ b/website/static/css/style.css
@@ -432,4 +432,6 @@ input[type='file'] {
  line-height: 20px;
 }
 
-
+.panel-heading .image_container{
+	background-color: transparent;
+}
